src/test/ui/error-codes/E0665.stderr
error[E0665]: `Default` cannot be derived for enums, only structs
  --> $DIR/E0665.rs:1:10
   |
LL | #[derive(Default)]
   |          ^^^^^^^
   |
   = note: this error originates in the derive macro `Default` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to previous error

For more information about this error, try `rustc --explain E0665`.
